--- a/scss/theme/_base.scss
+++ b/scss/theme/_base.scss
@@ -1,12 +1,15 @@
 
 html{
-    font-size: 14px;
+    font-size: 13px;
 }
 
 img{
     max-width: 100%;
 }
 
+a, a:hover{
+    text-decoration: none;
+}
 // Placeholder for image
 
 
@@ -21,7 +24,7 @@ img{
         display: block;;
         width: 100%;
     }
-    
+
     &.size-1by1{
         &:after{
             padding-top: 100%;
@@ -37,13 +40,20 @@ img{
             padding-top: 56.25%;
         }
     }
-    
+
     img{
         display: block;
         position: absolute;
         top:0;
         left: 0;
         width: 100%;
+    }
+}
+
+@media(min-width:768px){
+
+    html{
+        font-size: 14px;
     }
 }
 
