--- a/css/theme.css
+++ b/css/theme.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,700i&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Pacifico|Roboto:300,400,400i,500,700,700i");
 html {
   font-size: 13px; }
 
@@ -281,13 +281,15 @@ a, a:hover {
 .error-msg > * {
   color: #d9534f; }
 
+.header-active {
+  background: #000; }
+
 header {
   background: rgba(10, 10, 10, 0.2);
   transition: 0.5s linear; }
-  header .header-active {
-    background: rgba(0, 0, 0, 0.8); }
   header .navbar-brand {
-    max-width: 50%; }
+    max-width: 50%;
+    font-family: "Pacifico", cursive; }
   header .navbar-toggler {
     border-color: #178ec6 !important;
     overflow: hidden; }
@@ -359,9 +361,21 @@ header {
     padding: 200px 0;
     background-size: cover;
     background-position: center center; }
+    .lead-slider-wrapper .hello p, .lead-slider-wrapper .hello h2 {
+      font-family: "Roboto", sans-serif;
+      margin-bottom: 35px;
+      font-size: 1.5rem; }
     .lead-slider-wrapper .hello h2 {
-      font-family: 'PT Sans';
-      font-size: 40px !important; }
+      font-size: 2.5rem;
+      font-weight: 400;
+      line-height: 1.4;
+      letter-spacing: 0.7em; }
+    .lead-slider-wrapper .hello h3 {
+      font-family: "Roboto", sans-serif;
+      font-size: 1.5rem !important;
+      margin-bottom: 70px; }
+    .lead-slider-wrapper .hello .text-warning {
+      color: #178ec6 !important; }
   .lead-slider-wrapper:after {
     content: '';
     display: block;
@@ -375,19 +389,71 @@ header {
     z-index: 10; }
   .lead-slider-wrapper .owl-dots {
     position: absolute;
-    bottom: 120px;
-    width: 100%;
-    left: 0; }
+    bottom: 100px;
+    left: 0;
+    width: 100%; }
+  .lead-slider-wrapper .owl-carousel .owl-dots .owl-dot span {
+    width: 7px;
+    height: 7px;
+    background: #fff;
+    margin: 7px; }
+  .lead-slider-wrapper .owl-carousel .owl-dots .owl-dot.active span,
   .lead-slider-wrapper .owl-carousel .owl-dots .owl-dot:hover span {
-    background: #fff; }
-  .lead-slider-wrapper .text-warning {
-    color: #f7cc4b !important; }
-  .lead-slider-wrapper .bg-warning {
-    background-color: #f7cc4b !important; }
+    border-radius: none;
+    background: #178ec6; }
+  .lead-slider-wrapper .owl-carousel .owl-dots .owl-dot {
+    border: 2px solid transparent; }
+  .lead-slider-wrapper .owl-carousel .owl-dots .owl-dot.active {
+    border: 2px solid #178ec6; }
+  .lead-slider-wrapper .btn-slider {
+    color: #fff;
+    border: 2px solid rgba(255, 255, 255, 0.75);
+    background: transparent;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    height: auto;
+    padding: 8px 37px;
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 2px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    transition: all .6s ease; }
+  .lead-slider-wrapper .owl-nav {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%; }
+    .lead-slider-wrapper .owl-nav .owl-prev {
+      position: absolute;
+      top: 0;
+      transform: translateY(-50%);
+      left: 10px;
+      width: 40px;
+      height: 40px;
+      border: 2px solid #007bff !important; }
+    .lead-slider-wrapper .owl-nav .owl-next {
+      position: absolute;
+      top: 0;
+      transform: translateY(-50%);
+      right: 10px;
+      width: 40px;
+      height: 40px;
+      border: 2px solid #007bff !important; }
+    .lead-slider-wrapper .owl-nav .fa {
+      line-height: 30px;
+      color: #178ec6 !important;
+      font-size: 2.5rem; }
 
 @media (min-width: 768px) {
   .lead-slider-wrapper .hello h2 {
-    font-size: 60px !important; } }
+    font-size: 3rem !important; }
+  .lead-slider-wrapper .hello h3, .lead-slider-wrapper .hello p {
+    font-size: 2rem !important; } }
 @media (min-width: 992px) {
   .lead-slider-wrapper .hello {
     padding: 300px 0; }
