--- a/scss/theme/_fonts.scss
+++ b/scss/theme/_fonts.scss
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,700i&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Pacifico|Roboto:300,400,400i,500,700,700i');
 
 $font-roboto: 'Roboto', sans-serif;
+$font-pacifico: 'Pacifico', cursive;
 
 $font-weight-medium: 500;
 $font-weight-medium-italic: 500i;
