--- a/scss/theme/_lead-section.scss
+++ b/scss/theme/_lead-section.scss
@@ -8,9 +8,27 @@
         background-size: cover;
         background-position: center center;
 
+        p, h2{
+            font-family: $font-roboto;
+            margin-bottom: 35px;
+            font-size: 1.5rem;
+        }
+
         h2{
-            font-family: 'PT Sans';
-            font-size: 40px !important;
+            font-size: 2.5rem;
+            font-weight: $font-weight-regular;
+            line-height: 1.4;
+            letter-spacing: 0.7em;
+        }
+
+        h3{
+            font-family: $font-roboto;
+            font-size: 1.5rem !important;
+            margin-bottom: 70px;
+        }
+        
+        .text-warning{
+            color:$header-text-and-border-color !important;
         }
     }
 
@@ -27,25 +45,95 @@
         z-index: 10;
     }
 
-
+    //DOTS
     .owl-dots{
         position: absolute;
-        bottom: 120px;
-        width: 100%;
+        bottom: 100px;
         left: 0;
+        width: 100%;
     }
 
-    .owl-carousel .owl-dots .owl-dot:hover span {
-        background: #fff; 
+    .owl-carousel .owl-dots .owl-dot span{
+        width: 7px;
+        height: 7px;
+        background: $white;
+        margin: 7px;
     }
 
-    .text-warning{
-        color:#f7cc4b !important;
+    .owl-carousel .owl-dots .owl-dot.active span,
+    .owl-carousel .owl-dots .owl-dot:hover span
+        {
+        border-radius: none;
+        background: $header-text-and-border-color;
     }
 
-    .bg-warning{
-        background-color: #f7cc4b !important;
+    .owl-carousel .owl-dots .owl-dot{
+        //border-radius:50%;
+        border:2px solid transparent;
     }
+    .owl-carousel .owl-dots .owl-dot.active{
+        //border-radius:50%;
+        border:2px solid $header-text-and-border-color;
+    }
+
+    //BUTTON
+    .btn-slider{
+        color: #fff;
+        border: 2px solid rgba(255,255,255, .75);
+        background: transparent;
+        -webkit-border-radius: 2px;
+        -moz-border-radius: 2px;
+        border-radius: 2px;
+        height: auto;
+        padding: 8px 37px;
+        font-size: 12px;
+        font-weight: 400;
+        text-transform: uppercase;
+        text-decoration: none;
+        letter-spacing: 2px;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+        transition: all .6s ease;
+    }
+    
+    //NAV PREV AND NEXT
+    .owl-nav{
+        position: absolute;
+        top:50%;
+        left: 0;
+        width: 100%;
+        
+        .owl-prev{
+            position: absolute;
+            top:0;
+            transform: translateY(-50%);
+            left: 10px;
+            width: 40px;
+            height: 40px;
+            border: 2px solid $primary !important;
+            //border-radius: 50%;
+            
+        }
+        
+        .owl-next{
+            position: absolute;
+            top:0;
+            transform: translateY(-50%);
+            right: 10px;
+            width: 40px;
+            height: 40px;
+            border: 2px solid $primary !important;
+            //border-radius: 50%;
+        }
+        
+        .fa{
+            line-height: 30px;
+            color: $header-text-and-border-color !important;
+            font-size: 2.5rem;
+        }
+    }
+    
 }
 
 
@@ -58,7 +146,10 @@
     .lead-slider-wrapper{
         .hello{
             h2{
-                font-size: 60px !important;
+                font-size: 3rem !important;
+            }
+            h3, p{
+                font-size: 2rem !important;
             }
         }
     }
@@ -82,6 +173,7 @@
         .custom-padding{
             padding: 100px 0 !important;
         }
+        
     }
 }
 
