--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -148,7 +148,11 @@ $sizes: () !default;
 $sizes: map-merge(
   (
     25: 25%,
+    30: 30%,
+    40: 40%,
     50: 50%,
+    60: 60%,
+    70: 70%,
     75: 75%,
     100: 100%,
     auto: auto
