--- a/css/theme.css
+++ b/css/theme.css
@@ -355,6 +355,60 @@ header {
     max-width: 250px; }
   header .navbar-nav li a {
     padding: 5px 20px !important; } }
+footer {
+  background: rgba(10, 10, 10, 0.7); }
+  footer .footer-logo {
+    font-family: "Pacifico", cursive;
+    margin-top: 120px;
+    margin-bottom: 25px; }
+  footer .footer-navigation li {
+    display: inline-block; }
+    footer .footer-navigation li:last-of-type a {
+      border-right: 1px solid transparent; }
+    footer .footer-navigation li a {
+      text-decoration: none;
+      text-transform: uppercase;
+      color: white;
+      border-right: 1px solid #ccc;
+      font-size: 0.8rem;
+      padding: 3px; }
+      footer .footer-navigation li a:hover {
+        color: #178ec6; }
+  footer .social-icons li {
+    display: inline-block; }
+    footer .social-icons li .fa {
+      font-size: 2.5rem;
+      color: #fff;
+      padding-left: 10px;
+      padding-right: 10px; }
+  footer .cover {
+    position: absolute;
+    top: 0;
+    width: 100%; }
+    footer .cover .cover-article,
+    footer .cover .cover-article1 {
+      background: #5cafd7; }
+      footer .cover .cover-article p,
+      footer .cover .cover-article1 p {
+        font-size: 1.5rem; }
+      footer .cover .cover-article .cover-link,
+      footer .cover .cover-article1 .cover-link {
+        font-size: 2.5rem; }
+      footer .cover .cover-article .fa,
+      footer .cover .cover-article1 .fa {
+        font-size: 3rem;
+        text-align: center !important; }
+    footer .cover .cover-article1 {
+      background: #10638a; }
+
+@media (min-width: 576px) {
+  footer .footer-navigation li a {
+    font-size: 1rem;
+    padding: 6px; } }
+@media (min-width: 768px) {
+  footer .footer-navigation li a {
+    font-size: 1.2rem;
+    padding: 10px; } }
 .lead-slider-wrapper {
   position: relative; }
   .lead-slider-wrapper .hello {
