--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -10,7 +10,7 @@ footer{
 
     .footer-logo{
         font-family: $font-pacifico;
-        margin-top: 120px;
+        margin-top: 200px;
         margin-bottom: 25px;
     }
 
@@ -50,24 +50,24 @@ footer{
             }
         }
     }
-    
+
     .cover{
         position: absolute;
         top:0;
         width: 100%;
-        
+
         .cover-article,
         .cover-article1{
             background: $footer-cover-bg1;
             p{
-                font-size: 1.5rem;
+                font-size: 1rem;
             }
-            
+
             .cover-link{
-                font-size: 2.5rem;
+                font-size: 2rem;
             }
             .fa{
-                font-size: 3rem;
+                font-size: 2.5rem;
                 text-align: center !important;
             }
         }
@@ -79,9 +79,11 @@ footer{
 }
 
 @media(min-width:576px){
-    
+
     footer{
-        
+        .footer-logo{
+            margin-top: 160px;
+        }
         .footer-navigation{
             li{
                 a{
@@ -94,9 +96,11 @@ footer{
 }
 
 @media(min-width:768px){
-    
+
     footer{
-        
+        .footer-logo{
+            margin-top: 120px;
+        }
         .footer-navigation{
             li{
                 a{
@@ -105,6 +109,48 @@ footer{
                 }
             }
         }
+
     }
 }
 
+@media(min-width:992px){
+    footer{
+        .cover{
+
+            .cover-article,
+            .cover-article1{
+                p{
+                    font-size: 1.2rem;
+                }
+
+                .cover-link{
+                    font-size: 2.2rem;
+                }
+                .fa{
+                    font-size: 2.8rem;
+                }
+            }
+        }
+    }
+}
+
+@media(min-width:1200px){
+    footer{
+        .cover{
+
+            .cover-article,
+            .cover-article1{
+                p{
+                    font-size: 1.5rem;
+                }
+
+                .cover-link{
+                    font-size: 2.5rem;
+                }
+                .fa{
+                    font-size: 3rem;
+                }
+            }
+        }
+    }
+}
