--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -11,3 +11,4 @@
 @import "theme/_header.scss";
 @import "theme/_footer.scss";
 @import "theme/_lead-section.scss";
+@import "theme/_partners.scss";
