--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -165,7 +165,7 @@ $sizes: map-merge(
 //
 // Settings for the `<body>` element.
 
-$body-bg:                   $white !default;
+$body-bg:                   #F2F2F2 !default;
 $body-color:                $gray-900 !default;
 
 
