Finished contact form

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -12,3 +12,4 @@
 @import "theme/_footer.scss";
 @import "theme/_lead-section.scss";
 @import "theme/_partners.scss";
+@import "theme/_contact.scss";
