--- a/scss/theme/_partners.scss
+++ b/scss/theme/_partners.scss
@@ -7,7 +7,7 @@ $line-color: #EAEAEA;
 $grid-slider-border-color: rgba(138,185,87, 0.8);
 $partners-bg-bolor: #F2F2F2;
 
-.partners{
+.partners-section{
 
     .owl-carousel .owl-dots .owl-dot.active span, 
     .owl-carousel .owl-dots .owl-dot:hover span {
