Finished about-us section

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -13,3 +13,4 @@
 @import "theme/_lead-section.scss";
 @import "theme/_partners.scss";
 @import "theme/_contact.scss";
+@import "theme/_about-us.scss";
