--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -26,7 +26,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #F2F2F2; }
+  background-color: #fff; }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -364,7 +364,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #F2F2F2;
+  background-color: #fff;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -2802,11 +2802,11 @@ input[type="button"].btn-block {
   .custom-range:focus {
     outline: none; }
     .custom-range:focus::-webkit-slider-thumb {
-      box-shadow: 0 0 0 1px #F2F2F2, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
     .custom-range:focus::-moz-range-thumb {
-      box-shadow: 0 0 0 1px #F2F2F2, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
     .custom-range:focus::-ms-thumb {
-      box-shadow: 0 0 0 1px #F2F2F2, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
   .custom-range::-moz-focus-outer {
     border: 0; }
   .custom-range::-webkit-slider-thumb {
@@ -2938,8 +2938,8 @@ input[type="button"].btn-block {
   .nav-tabs .nav-link.active,
   .nav-tabs .nav-item.show .nav-link {
     color: #495057;
-    background-color: #F2F2F2;
-    border-color: #dee2e6 #dee2e6 #F2F2F2; }
+    background-color: #fff;
+    border-color: #dee2e6 #dee2e6 #fff; }
   .nav-tabs .dropdown-menu {
     margin-top: -1px;
     border-top-left-radius: 0;
@@ -5537,6 +5537,9 @@ button.bg-dark:focus {
 .shadow-none {
   box-shadow: none !important; }
 
+.w-20 {
+  width: 20% !important; }
+
 .w-25 {
   width: 25% !important; }
 
@@ -5558,11 +5561,17 @@ button.bg-dark:focus {
 .w-75 {
   width: 75% !important; }
 
+.w-80 {
+  width: 80% !important; }
+
 .w-100 {
   width: 100% !important; }
 
 .w-auto {
   width: auto !important; }
+
+.h-20 {
+  height: 20% !important; }
 
 .h-25 {
   height: 25% !important; }
@@ -5584,6 +5593,9 @@ button.bg-dark:focus {
 
 .h-75 {
   height: 75% !important; }
+
+.h-80 {
+  height: 80% !important; }
 
 .h-100 {
   height: 100% !important; }
