--- a/css/theme.css
+++ b/css/theme.css
@@ -490,8 +490,8 @@ footer {
     .lead-slider-wrapper .hello h2 {
       font-size: 2.5rem;
       font-weight: 400;
-      line-height: 1.4;
-      letter-spacing: 0.7em; }
+      line-height: 1;
+      letter-spacing: 0.2em; }
     .lead-slider-wrapper .hello h3 {
       font-family: "Roboto", sans-serif;
       font-size: 1.5rem !important;
@@ -572,7 +572,9 @@ footer {
   .lead-slider-wrapper .btn-slider {
     padding: 8px 37px; }
   .lead-slider-wrapper .hello h2 {
-    font-size: 3rem !important; }
+    font-size: 3rem !important;
+    line-height: 1.4;
+    letter-spacing: 0.7em; }
   .lead-slider-wrapper .hello h3, .lead-slider-wrapper .hello p {
     font-size: 2rem !important; } }
 @media (min-width: 992px) {
@@ -585,7 +587,8 @@ footer {
   .lead-slider-wrapper .custom-padding {
     padding: 100px 0 !important; } }
 .partners-section {
-  padding: 50px 0; }
+  background: #f5f5f5;
+  padding: 30px 0; }
   .partners-section .owl-carousel .owl-dots .owl-dot.active span,
   .partners-section .owl-carousel .owl-dots .owl-dot:hover span {
     background: #178ec6; }
@@ -649,13 +652,16 @@ footer {
 
 @media (min-width: 768px) {
   .partners-section {
-    padding: 70px 0; } }
+    padding: 50px 0; } }
 @media (min-width: 992px) {
   .partners-section {
-    padding: 90px 0; } }
+    padding: 70px 0; } }
 @media (min-width: 1200px) {
   .partners-section {
-    padding: 100px 0; } }
+    padding: 85px 0; } }
+.text-contact {
+  color: #444444 !important; }
+
 .contact-section {
   padding: 50px 0; }
   .contact-section p {
@@ -664,8 +670,8 @@ footer {
     border-radius: 0; }
     .contact-section .contact-form .form-control:focus {
       outline: none;
-      box-shadow: 0 0 2px  #ccc;
-      border-color: #ccc; }
+      box-shadow: 0 0 3px #cccccc;
+      border-color: #cccccc; }
   .contact-section .contact-form textarea {
     height: 100px;
     resize: none; }
@@ -685,5 +691,30 @@ footer {
 @media (min-width: 1200px) {
   .contact-section {
     padding: 100px 0; } }
+.lineAfter:after {
+  content: '';
+  display: block;
+  width: 200px;
+  height: 2.5px;
+  background: #178ec6;
+  margin-top: 10px;
+  margin-bottom: 10px; }
+
+.line-center:after {
+  margin: 30px auto 30px; }
+
+.aboutUs-section {
+  padding: 90px 0; }
+  .aboutUs-section h2 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700; }
+  .aboutUs-section p {
+    font-family: "Roboto", sans-serif;
+    font-size: 1.1rem; }
+  .aboutUs-section .aboutUs-btn .btn-outline-info {
+    font-weight: 700 !important; }
+  .aboutUs-section .fa {
+    font-size: 2.5rem;
+    color: #ced4da; }
 
 /*# sourceMappingURL=theme.css.map */
