--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -147,6 +147,7 @@ $sizes: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $sizes: map-merge(
   (
+    20: 20%,
     25: 25%,
     30: 30%,
     40: 40%,
@@ -154,6 +155,7 @@ $sizes: map-merge(
     60: 60%,
     70: 70%,
     75: 75%,
+    80: 80%,
     100: 100%,
     auto: auto
   ),
@@ -165,7 +167,7 @@ $sizes: map-merge(
 //
 // Settings for the `<body>` element.
 
-$body-bg:                   #F2F2F2 !default;
+$body-bg:                   $white !default;
 $body-color:                $gray-900 !default;
 
 
