--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -8,10 +8,10 @@ footer{
 
     background:$footer-bg-transparent;
 
-    .footer-logo{
-        font-family: $font-pacifico;
-        margin-top: 200px;
-        margin-bottom: 25px;
+    img{
+        padding-top: 180px;
+        padding-bottom: 25px;
+        max-width: 130px;
     }
 
     .footer-navigation{
@@ -81,9 +81,11 @@ footer{
 @media(min-width:576px){
 
     footer{
-        .footer-logo{
-            margin-top: 160px;
+
+        img{
+            padding-top: 160px;
         }
+        
         .footer-navigation{
             li{
                 a{
@@ -98,9 +100,11 @@ footer{
 @media(min-width:768px){
 
     footer{
-        .footer-logo{
-            margin-top: 120px;
+        img{
+            padding-top: 120px;
+            max-width: 170px; 
         }
+        
         .footer-navigation{
             li{
                 a{
