--- a/scss/theme/_about-us.scss
+++ b/scss/theme/_about-us.scss
@@ -18,6 +18,7 @@
     padding: 90px 0;
     
     h2{
+        font-size: 2.5rem;
         font-family: $font-roboto;
         font-weight: $font-weight-bold;
     }
