--- a/scss/theme/_gallery.scss
+++ b/scss/theme/_gallery.scss
@@ -1,5 +1,10 @@
+$gallery-bg-color: #F6F9F9;
+$gallery-hover-bg-color:rgba(21,164,250,0.7);
 
 .gallery-section{
+    
+    background: $gallery-bg-color;
+    
     .gallery-item{
         figure {
             position: relative;
@@ -16,13 +21,13 @@
             left: 0;
             width: 100%;
             height: 100%;
+            background: $gallery-hover-bg-color;
             
             .fa{
-                border: 1px solid #15a4fa;
-                background: #15a4fa;
+                border: 1px solid $gallery-hover-bg-color;
                 padding: 12px;
                 border-radius: 3px;
-                color: #fff;
+                color: $white;
                 font-size: 1rem;
                 text-decoration: none;
             }
@@ -39,7 +44,7 @@
             }
 
             .hover {
-                background: #15a4fa;
+                background: $gallery-hover-bg-color;
                 display: none !important;
 
             }
@@ -51,7 +56,7 @@
 
             .hover{
                 .fa{
-                    border: 1px solid #fff;
+                    border: 1px solid $white;
                     opacity: 1;
                     transition: 0.3s ease;
 
