--- a/scss/theme/_partners.scss
+++ b/scss/theme/_partners.scss
@@ -5,11 +5,11 @@ $partners-owl-carousel-default: #BABABA;
 $partners-apostroph-color: #178ec6;
 $line-color: #EAEAEA;
 $grid-slider-border-color: rgba(138,185,87, 0.8);
-$partners-bg-bolor: #F2F2F2;
+$partners-bg-bolor: #d6d6d6;
 
 .partners-section{
     
-    background: #f5f5f5;
+    background: $partners-bg-bolor;
     padding:30px 0;
     
     .owl-carousel .owl-dots .owl-dot.active span, 
