--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -15,3 +15,4 @@
 @import "theme/_contact.scss";
 @import "theme/_about-us.scss";
 @import "theme/_gallery.scss";
+@import "theme/_get-started.scss";
